--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,12 @@
-# Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=thesis
-DB_NAME=polylearn_db
+# Gamit ang Connection URL (recommended)
+DATABASE_URL = mysql://root:[YOUR_PASSWORD]@metro.proxy.rlwy.net:33610/railway
+
+# O kaya individual variables
+DB_HOST = metro.proxy.rlwy.net
+DB_PORT = 33610
+DB_USER = root
+DB_PASSWORD = kxcXpQBnhZJDrJgPYPMaBXqWvgNmilfg
+DB_NAME = railway
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
